# coding-harness

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
src/harness/: __init__.py  parsing.py  session.py  vllm_check.py  vllm_client.py  workspace.py
tests/: test_parsing.py  test_session.py  test_vllm_client.py  test_vllm_integration.py  test_workspace.py
